[package]
name = "me_fs_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "me_fs_rs"
path = "src/lib.rs"

[[bin]]
name = "me_fs"
path = "src/main.rs"

[[bin]]
name = "gen2mfs"
path = "bin/gen2mfs.rs"

[[bin]]
name = "csum"
path = "bin/csum.rs"

[[bin]]
name = "crc"
path = "bin/crc.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
crc = "3.2.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.15"
zerocopy = "0.7.32"
zerocopy-derive = "0.7.32"

