[package]
name = "me_fs_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "me_fs_rs"
path = "src/lib.rs"

[[bin]]
name = "me_fs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
zerocopy = "0.8.27"
zerocopy-derive = "0.8.27"
